Bug 157223 - Table of Figures category reset from Illustration to Figure when edited
Summary: Table of Figures category reset from Illustration to Figure when edited
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 TableofContents-Indexes-Dialog
  Show dependency treegraph
 
Reported: 2023-09-13 12:19 UTC by stragu
Modified: 2023-09-14 16:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample ODT (46.21 KB, application/vnd.oasis.opendocument.text)
2023-09-13 12:19 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-09-13 12:19:31 UTC
Created attachment 189549 [details]
sample ODT

Steps:
1. Open attachment, see that the Table of Figures tracks the category Illustration.
2. Right-click on ToF > Edit index: see that category is reset to the default "Figure"
3. Press OK

Result:
Even though no change was made by the user, the category was changed to "Figure" and therefore the ToF is empty.

Reproduced in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43df1237a091e2b0f4495d5a7e959f7beaab025d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Repro in 6.3.6.2, no repro in 6.2.0.3 -> regression.

Bibisected with linux-64-6.3 repo to first bad commit ccd878b48f412bdfc54c0c5e03b5aed5e622bf9b which points to core commit:

commit 389491aedd659a3c4b24b9902b6cb54075874d3e
author	Caolán McNamara Tue Dec 18 15:16:04 2018 +0000
committer	Caolán McNamara Fri May 31 10:31:01 2019 +0200
weld SwMultiTOXTabDialog
Reviewed-on: https://gerrit.libreoffice.org/65432

Caolán, can you please have a look?
Comment 1 stragu 2023-09-13 12:21:13 UTC
Seems gtk3-only. No repro with gen VCL plugin.
Comment 2 Commit Notification 2023-09-13 14:17:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcb3e9c54441fd47d673774583f573d391556866

tdf#157223 get sequence name before toggling checkboxes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2023-09-13 14:18:16 UTC
done in trunk, backport to 7-6 in gerrit
Comment 4 stragu 2023-09-14 09:55:13 UTC
Thank you for the quick fix, Caolán!
Verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4942aa1533af25cf102da7516bd5e521c553aa07
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Cheers
Comment 5 Commit Notification 2023-09-14 16:44:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/fe871fa933c1da3f6bcdb9039dd8cf7b570ad94f

tdf#157223 get sequence name before toggling checkboxes

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.